@@ -3,6 +3,7 @@
 
 from trytond.model import ModelSQL, fields
 from trytond.pool import Pool
+from trytond.transaction import Transaction
 
 
 class FunctionAccessor(ModelSQL):
@@ -25,8 +26,26 @@ class FunctionAccessorTarget(ModelSQL):
     __name__ = 'test.function.accessor.target'
 
 
+class FunctionGetterContext(ModelSQL):
+    "Function Getter Context"
+    __name__ = 'test.function.getter_context'
+
+    function_with_context = fields.Function(
+        fields.Char("Function"),
+        'getter', getter_with_context=True)
+    function_without_context = fields.Function(
+        fields.Char("Function"),
+        'getter', getter_with_context=False)
+
+    def getter(self, name):
+        context = Transaction().context
+        return '%s - %s' % (
+            context.get('language', 'empty'), context.get('test', 'empty'))
+
+
 def register(module):
     Pool.register(
         FunctionAccessor,
         FunctionAccessorTarget,
+        FunctionGetterContext,
         module=module, type_='model')
