@@ -1,3 +1,4 @@
+* Cache Function field getter without context in readonly transactions
 * Use UNION for 'Or'-ed domain with subqueries
 * Use local cache for relation fields in readonly transactions
 * Add option to strip leading and trailing whitespace from fields.Char
